--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tajresapp",
+  "name": "tajrestapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "axios": "^0.21.1",
+    "reactstrap": "^8.8.0",
+    "bootstrap": "^4.5.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
