updates nginx ingress
Signed-off-by: afzal442 <afzal442@gmail.com>

--- a/k8s-spec/ingress.yaml
+++ b/k8s-spec/ingress.yaml
@@ -8,8 +8,8 @@ spec:
     - host: myres-svc.172.105.45.105.nip.io
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          - pathType: Prefix
+            path: "/v1"     
             backend:
               service:
                 name: restuarant-service
