updates nginx ingress
Signed-off-by: afzal442 <afzal442@gmail.com>

--- a/k8s-spec/ingress.yaml
+++ b/k8s-spec/ingress.yaml
@@ -9,7 +9,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/v1"     
+            path: /    
             backend:
               service:
                 name: restuarant-service
