updates deploy and svc
Signed-off-by: afzal442 <afzal442@gmail.com>

--- a/k8s-spec/deploy.yaml
+++ b/k8s-spec/deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: restuarant-deploy
-  namespace: clh
+  namespace: myc
   labels:
     app: restuarant-app
 spec:
