--- a/k8s-spec/service.yaml
+++ b/k8s-spec/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: restuarant-service
-  namespace: clh
+  namespace: myc
   labels:
     app: restuarant-app
 spec:
