--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,20 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm ci
-    - run: npm test
+#   - run: npm test
     - run: npm run build --if-present
+
+deploy:
+  runs-on: ubuntu-latest
+#   needs: [build]
+  if: "!contains(github.event.head_commit.message, '[skip ci]')"
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Deploy to Vercel Action
+      uses: BetaHuhn/deploy-to-vercel-action@v1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
