--- a/k8s-spec/deploy.yaml
+++ b/k8s-spec/deploy.yaml
@@ -4,19 +4,19 @@ metadata:
   name: restuarant-deploy
   namespace: myc
   labels:
-    app: restuarant-app
+    app: {{ .Values.appName }}
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: restuarant-app
+      app: {{ .Values.appName }}
   template:
     metadata:
       labels:
-        app: restuarant-app
+        app: {{ .Values.appName }}
     spec:
       containers:
-      - name: restuarant-app
-        image: afzal442/restaurant-app:v5
+      - name: {{ .Values.appName }}
+        image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
         ports:
-        - containerPort: 80
+        - containerPort: {{ .Values.port }}
