--- a/k8s-spec/service.yaml
+++ b/k8s-spec/service.yaml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: restuarant-service
-  namespace: myc
+  namespace: {{ .Values.namespace }}
   labels:
-    app: restuarant-app
+    app: {{ .Values.appName }}
 spec:
   type: LoadBalancer
   selector:
-    app: restuarant-app
+    app: {{ .Values.appName }}
   ports:
     - name: http
       protocol: TCP
-      port: 80
-      targetPort: 80
+      port: {{ .Values.port }}
+      targetPort: {{ .Values.port }}
   sessionAffinity: None
